# noship

./: CHANGELOG.md  Cargo.toml  README.md
examples/: example.rs
src/: lib.rs
tests/: tests.rs
tests/assets/: app.rs  app_with_message.rs
